--- a/nicnbk-ui-angular2/src/app/pe/view/pe.fund-profile.component.html
+++ b/nicnbk-ui-angular2/src/app/pe/view/pe.fund-profile.component.html
@@ -616,52 +616,52 @@
                                                 </tr>
                                             </table>
                                         </div>
-                                        <div class="row withpadding">
-                                            <h4>Observations</h4>
-                                            <h5>General Partner</h5>
-                                            <table class=" col-md-4 table-striped table-condensed">
-                                                <th>Merits</th>
-                                                <tr>
-                                                    <td class="col-md-3"><textarea fz-elastic spellcheck="false"  class="form-control" name="generalPartnerMerits" [(ngModel)]="fund.generalPartnerMerits"></textarea></td>
-                                                </tr>
-                                            </table>
-                                            <table class=" col-md-4 table-striped table-condensed">
-                                                <th>Risks</th>
-                                                <tr>
-                                                    <td class="col-md-3"><textarea  fz-elastic spellcheck="false"  class="form-control" name="generalPartnerRisks" [(ngModel)]="fund.generalPartnerRisks"></textarea></td>
-                                                </tr>
-                                            </table>
-                                        </div>
-                                        <div class="row withpadding">
-                                            <h5>Strategy/Structure</h5>
-                                            <table class=" col-md-4 table-striped table-condensed">
-                                                <th>Merits</th>
-                                                <tr>
-                                                    <td class="col-md-3"><textarea fz-elastic  spellcheck="false"  class="form-control" name="strategyStructureMerits" [(ngModel)]="fund.strategyStructureMerits"></textarea></td>
-                                                </tr>
-                                            </table>
-                                            <table class=" col-md-4 table-striped table-condensed">
-                                                <th>Risks</th>
-                                                <tr>
-                                                    <td class="col-md-3"><textarea fz-elastic  spellcheck="false"  class="form-control" name="strategyStructureRisks" [(ngModel)]="fund.strategyStructureRisks"></textarea></td>
-                                                </tr>
-                                            </table>
-                                        </div>
-                                        <div class="row withpadding">
-                                            <h5>Performance</h5>
-                                            <table class=" col-md-4 table-striped table-condensed">
-                                                <th>Merits</th>
-                                                <tr>
-                                                    <td class="col-md-3"><textarea fz-elastic  spellcheck="false"  class="form-control" name="performanceMerits" [(ngModel)]="fund.performanceMerits"></textarea></td>
-                                                </tr>
-                                            </table>
-                                            <table class=" col-md-4 table-striped table-condensed">
-                                                <th>Risks</th>
-                                                <tr>
-                                                    <td class="col-md-3"><textarea fz-elastic  spellcheck="false"  class="form-control" name="performanceRisks" [(ngModel)]="fund.performanceRisks"></textarea></td>
-                                                </tr>
-                                            </table>
-                                        </div>
+                                        <!--<div class="row withpadding">-->
+                                            <!--<h4>Observations</h4>-->
+                                            <!--<h5>General Partner</h5>-->
+                                            <!--<table class=" col-md-4 table-striped table-condensed">-->
+                                                <!--<th>Merits</th>-->
+                                                <!--<tr>-->
+                                                    <!--<td class="col-md-3"><textarea fz-elastic spellcheck="false"  class="form-control" name="generalPartnerMerits" [(ngModel)]="fund.generalPartnerMerits"></textarea></td>-->
+                                                <!--</tr>-->
+                                            <!--</table>-->
+                                            <!--<table class=" col-md-4 table-striped table-condensed">-->
+                                                <!--<th>Risks</th>-->
+                                                <!--<tr>-->
+                                                    <!--<td class="col-md-3"><textarea  fz-elastic spellcheck="false"  class="form-control" name="generalPartnerRisks" [(ngModel)]="fund.generalPartnerRisks"></textarea></td>-->
+                                                <!--</tr>-->
+                                            <!--</table>-->
+                                        <!--</div>-->
+                                        <!--<div class="row withpadding">-->
+                                            <!--<h5>Strategy/Structure</h5>-->
+                                            <!--<table class=" col-md-4 table-striped table-condensed">-->
+                                                <!--<th>Merits</th>-->
+                                                <!--<tr>-->
+                                                    <!--<td class="col-md-3"><textarea fz-elastic  spellcheck="false"  class="form-control" name="strategyStructureMerits" [(ngModel)]="fund.strategyStructureMerits"></textarea></td>-->
+                                                <!--</tr>-->
+                                            <!--</table>-->
+                                            <!--<table class=" col-md-4 table-striped table-condensed">-->
+                                                <!--<th>Risks</th>-->
+                                                <!--<tr>-->
+                                                    <!--<td class="col-md-3"><textarea fz-elastic  spellcheck="false"  class="form-control" name="strategyStructureRisks" [(ngModel)]="fund.strategyStructureRisks"></textarea></td>-->
+                                                <!--</tr>-->
+                                            <!--</table>-->
+                                        <!--</div>-->
+                                        <!--<div class="row withpadding">-->
+                                            <!--<h5>Performance</h5>-->
+                                            <!--<table class=" col-md-4 table-striped table-condensed">-->
+                                                <!--<th>Merits</th>-->
+                                                <!--<tr>-->
+                                                    <!--<td class="col-md-3"><textarea fz-elastic  spellcheck="false"  class="form-control" name="performanceMerits" [(ngModel)]="fund.performanceMerits"></textarea></td>-->
+                                                <!--</tr>-->
+                                            <!--</table>-->
+                                            <!--<table class=" col-md-4 table-striped table-condensed">-->
+                                                <!--<th>Risks</th>-->
+                                                <!--<tr>-->
+                                                    <!--<td class="col-md-3"><textarea fz-elastic  spellcheck="false"  class="form-control" name="performanceRisks" [(ngModel)]="fund.performanceRisks"></textarea></td>-->
+                                                <!--</tr>-->
+                                            <!--</table>-->
+                                        <!--</div>-->
                                     </div>
                                     <div class="row">
                                         <div class="col-md-12">
