--- a/nicnbk-ui-angular2/src/app/pe/view/pe.fund-profile.component.html
+++ b/nicnbk-ui-angular2/src/app/pe/view/pe.fund-profile.component.html
@@ -149,7 +149,7 @@
                                             </div>
                                             <table class=" col-md-4 table-striped table-condensed">
                                                 <tr>
-                                                    <td class="col-md-1">Fund size</td>
+                                                    <td class="col-md-1">Fund size (mln)</td>
                                                     <td class="col-md-3"><input style="width: 100%" type="text" name="fundSize" [(ngModel)]="fund.fundSize" pattern="[+]?[0-9]*\.?[0-9]+" #fundSize2="ngModel"/>
                                                         <div [hidden]="fundSize2.valid || fundSize2.pristine" class="alert alert-danger">
                                                             Only positive number could be entered
@@ -280,7 +280,7 @@
 
                                         <div class="row top-buffer">
                                             <div class="col-md-1">
-                                                <label><b>Fund size</b></label>
+                                                <label><b>Fund size (mln)</b></label>
                                             </div>
                                             <div class="col-md-4">
                                                 <input type="text" class="form-control" placeholder="Enter fund size"
